// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe mostrar el componente con la imagen default 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Imagen Producto"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage debe mostrar el componente con la imagen personalizada 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Imagen Producto"
    className="productImg undefined"
    src="http://imagen.jpg"
  />
</div>
`;
